# nano-dllm

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DECISIONS.md  DEVELOP.md  INSTALL.md  MAINTENANCE.md  Makefile  PORTING_TASKS.md  README.md  README_amd.md  ROADMAP.md  bench.py  compare_model_outputs.py  debug_bench.py  debug_causal_mask.py  debug_forward_pass.py  debug_rotary.py  demo.py  example.py  generate_text.py  load_model.py  mini_bench.py  move_and_check_scripts.py  mps_optimized_test.py  pyproject.toml  requirements.txt  serving_bench.py  setup.sh  test_block_allocation.py  test_block_manager_fix.py  test_cache_allocation.py  test_causal_mask_fix.py  test_causal_mask_multi.py  test_fixed_model.py  test_generation_after_fix.py  test_hf_direct.py  test_hf_manual.py  (+11 more)
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
apps/: __init__.py
docs/: CHANGELOG.md  README.md  SUMMARY.md  api.md  architecture-diagrams.md  architecture.md  development.md  models.md  performance.md  porting_plan.md
examples/: example_dream.py  example_qwen.py
nanovllm/: config.py  llm.py  sampling_params.py
scripts/: compare_outputs.py  compare_with_llamacpp.py  debug_attention.py  debug_attention_comparison.py  debug_attention_detailed.py  debug_attention_mask.py  debug_heads.py  debug_model_consistency.py  debug_model_weights.py  debug_tokenizer.py  debug_vocab_size.py  download_hf_model.py  hf_direct_test.py  inspect_output_structure.py  medium_bench.py  mps_bench.py  pytest_scan_timing.py  quick_bench.py
tests/: conftest.py  test.py  test_block_allocation.py  test_block_manager.py  test_block_manager_fix.py  test_cache_allocation.py  test_causal_mask_multi.py  test_engine_debug.py  test_fixed_model.py  test_generation.py  test_generation_after_fix.py  test_hf_direct.py  test_hf_manual.py  test_hf_mini.py  (+5 more)
(+100 files in other folders)
