[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.51.0",
    "xxhash",
    "nvidia-ml-py3>=7.352.0",
]

[project.optional-dependencies]
gpu = [
    "triton>=3.0.0; platform_machine != 'arm64'",
    "flash-attn; platform_machine != 'arm64'",
    "nvidia-ml-py; platform_machine != 'arm64'",
]

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools]
packages = ["nanovllm"]
