# Register custom pytest marks
[tool.pytest.ini_options]
markers = [
    "heavy: marks tests as heavy (deselect with '-m \"not heavy\"')"
]
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.51.0",
    "xxhash",
    "accelerate>=1.8.1",
    "matplotlib>=3.10.3",
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.29.0",
    # setuptools is required for torch.compile/Inductor backend (dynamic C++/CUDA compilation)
    "setuptools",
]

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools]
packages = ["nanovllm"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-timeout>=2.4.0",
    "tqdm",
    "pytest-cov",
]
